packages/app/src/app/journal/journal.component.scss
:host {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.mat-sidenav-container {
  height: 100%;
}

.journal-main {
  padding: 1.25rem;
}

.journal-header {
  border-right-color: var(--mat-sidenav-container-divider-color, transparent);
  border-right-width: 1px;
  border-right-style: solid;
  position: sticky;
  padding: 10px;
}

.journal-header h1 {
  margin-bottom: 0;
}

.journal-sidebar {
  width: 50rem;
  max-width: 75%;
}

.journal-sidebar-content {
  padding: 1rem;
}

.fab-button {
  position: fixed;
  bottom: 1.25rem;
  right: 1.25rem;
}

.journal-content {
  padding-bottom: 100px;
  overflow-x: auto;

  @media (max-width: 600px) {
    width: 100%;
    -webkit-overflow-scrolling: touch;
  }
}

.journal-table-wrapper {
  height: 100%;
  &::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
  }
  &::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0, 0, 0, 0.5);
    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
  }
}

.journal-table-row {
  cursor: pointer;

  &:hover {
    background-color: lightgray;
  }
}
.sidebar-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-shadow: -6px -11px 20px 3px;
  padding: 1rem;
  position: sticky;
  top: 0;
  background: white;
  z-index: 1;
}

.sidebar-header h1 {
  margin-bottom: 0;
}

.mat-mdc-form-field {
  width: 100%;
}

.journal-entry-details {
  display: flex;
  flex-direction: column;
  margin-top: 16px;
  margin-bottom: 16px;

  > * {
    margin: 0;
  }
}

.journal-entry-save-buttons {
  display: flex;
  justify-content: end;
  gap: 6px;
}

.journal-filter {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  gap: 0.5rem;

  @media (max-width: 1200px) {
    flex-direction: column;
    gap: 0;
    margin-bottom: 1.5rem;
    align-items: start;
    justify-content: center;
  }
}

.journal-filter-row {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  align-items: center;

  @media (max-width: 600px) {
    flex-direction: column;
    gap: 0;
    align-items: start;
    width: 100%;
  }
}

.journal-filter-search,
.journal-filter-department {
  width: 20rem;
  margin-top: 22px;

  @media (max-width: 1200px) {
    width: 18rem;
  }

  @media (max-width: 600px) {
    width: 100%;
  }
}

.journal-filter-buttons {
  @media (max-width: 600px) {
    gap: 22px;
  }
}

tr.key-message {
  background-color: #ffeeee;
}

tr.journal-table-row.key-message:hover {
  background-color: #d5c4c4;
}

.journal-header-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.end {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.end .journal-entry-save-buttons {
  margin-bottom: 1rem;
}

.message-number {
  color: #666;
  font-size: 1rem;
}

.details-table {
  width: 100%;
  border-collapse: collapse;

  td {
    padding: 0.5rem;
    vertical-align: top;
    border-bottom: 1px solid rgba(0, 0, 0, 0.12);

    &:first-child {
      width: 150px;
    }
  }
}

.journal-table-message-cell {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.info-send-back {
  border: 1px solid lightgray;
  padding: 14px;
  border-radius: 4px;
}

.journal-entry-checkbox {
  margin-bottom: 1rem;
}

